<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/sorting_option"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sortByName"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/sortByOld"
                android:title="@string/sort_by_creation_date" />
        </menu>
    </item>

    <item
        android:id="@+id/itemView"
        android:title="@string/grid_view" />
    <item
        android:id="@+id/showTask"
        android:checkable="true"
        android:title="@string/hide_completed_task" />
    <item
        android:id="@+id/delete_all_completed_task"
        android:title="@string/delete_completed_task" />
    <item
        android:id="@+id/setting"
        android:title="@string/settings" />
</menu>